<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.efcs.ejercicio5.MainActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:text="@string/topping"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="74dp"
        android:layout_weight="0.01" />

    <CheckBox
        android:id="@+id/checkBoxCrema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crema"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="104dp" />

    <CheckBox
        android:id="@+id/checkBoxChocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/chocolate"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="132dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/cantidad"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="199dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonMenos"
            android:layout_width="64dp"
            android:layout_height="44dp"
            android:layout_marginRight="10dp"
            android:text="@string/cantidad_menos"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="233dp" />

        <TextView
            android:id="@+id/textViewCantidad"
            android:layout_width="18dp"
            android:layout_height="29dp"
            android:text="@string/cantidad_numero"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="241dp"
            android:layout_weight="0.05" />

        <Button
            android:id="@+id/buttonMas"
            android:layout_width="65dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cantidad_mas"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="233dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonPedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pedir"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="330dp" />

</LinearLayout>
